--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.5
   url_launcher: ^6.1.5
   intl: ^0.17.0
+  dropdown_button2: ^2.3.7
 
 dev_dependencies:
   flutter_test:
