--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -53,8 +53,13 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter_icons:
-  android: "launcher_icon"
-  image_path: "asset/icons/njicon.png"
+  ios: false
+  android: true
+  #image_path_ios: "assets/launcher/njicon_tran.png"
+  image_path_android: "assets/launcher/njicon_tran.png"
+  adaptive_icon_background: "assets/launcher/nj_bg.png"
+  adaptive_icon_foreground: "assets/launcher/njicon_tran.png"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
